--- a/index.html
+++ b/index.html
@@ -202,11 +202,10 @@
           </p>
 
           <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            During my graduate studies, I have covered lectures in the domain of classical computer vision tasks 
+            (Image Processing in Computer Vision, Differential Equations in Image Processing and Computer Vision,
+            Image Acquisition Methods, Interpolation and Approximation in Visual Computing), Computer Graphics, 
+            Numerical Algorithms for Visual Computing, and Machine Learning.
           </p>
         </section>
 
