--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
 
                 <p class="service-item-text">
                   In this collaborative project, I built a rendering engine using the Lightwave framework.
-                  <a href="" target="_blank" style="color:white">Link to the project webpage.</a>
+                  <a href="" target="_blank" style="color:white; font-weight: bold;">Link to the project webpage.</a>
                 </p>
                 <p class="project-category">Graduate</p>
               </div>
