--- a/index.html
+++ b/index.html
@@ -537,6 +537,22 @@
 
         <section class="service">
 
+          <ul class="filter-list">
+
+            <li class="filter-item">
+              <button class="active" data-filter-btn>All</button>
+            </li>
+
+            <li class="filter-item">
+              <button data-filter-btn>Graduate</button>
+            </li>
+
+            <li class="filter-item">
+              <button data-filter-btn>Under-graduate</button>
+            </li>
+
+          </ul>
+
           <div class="filter-select-box">
 
             <button class="filter-select" data-select>
@@ -563,17 +579,13 @@
                 <button data-select-item>Under-graduate</button>
               </li>
 
-              <li class="select-item">
-                <button data-select-item>Personal</button>
-              </li>
-
             </ul>
 
           </div>
 
           <ul class="service-list">
 
-            <li class="service-item">
+            <li class="service-item, project-item  active" data-filter-item data-category="graduate">
 
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">EIGEN - A renderer based on physically based rendering</h4>
@@ -587,7 +599,7 @@
 
             </li>
 
-            <li class="service-item">
+            <li class="service-item, project-item  active" data-filter-item data-category="graduate">
 
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">BRDF implementation using SHADERed</h4>
@@ -601,7 +613,7 @@
 
             </li>
 
-            <li class="service-item">
+            <li class="service-item, project-item  active" data-filter-item data-category="under-graduate">
 
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Comparative Analysis of Epsilon-Greedy, UCB & Thompson Sampling 
@@ -617,7 +629,7 @@
 
             </li>
 
-            <li class="service-item">
+            <li class="service-item, project-item  active" data-filter-item data-category="under-graduate">
 
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">COVID Safety Tracker</h4>
@@ -634,7 +646,7 @@
 
             </li>
 
-            <li class="service-item">
+            <li class="service-item, project-item  active" data-filter-item data-category="under-graduate">
 
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Vocal Psychiatric Simulator</h4>
@@ -650,7 +662,7 @@
 
             </li>
 
-            <li class="service-item">
+            <li class="service-item, project-item  active" data-filter-item data-category="under-graduate">
 
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Digit Recognition using Machine Learning in C</h4>
