--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Saarland University</h4>
+              <h4 class="h4 timeline-item-title">Saarland University, Germany</h4>
 
               <span>2023 — Present</span>
 
@@ -384,7 +384,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University of Petroleum and Energy Studies</h4>
+              <h4 class="h4 timeline-item-title">University of Petroleum and Energy Studies, India</h4>
 
               <span>2017 — 2021</span>
 
