--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 
           <div class="title-wrapper">
             <div class="icon-box">
-              <ion-icon name="book-outline"></ion-icon>
+              <ion-icon name="briefcase-outline"></ion-icon>
             </div>
 
             <h3 class="h3">Experience</h3>
@@ -426,6 +426,34 @@
               <p class="timeline-text">
                 During my internship at Rhocron, I worked on the project "Low-Resolution Face Recognition in the Wild." Using YOLO v3 and SRGANs, I built a system 
                 capable of recognizing faces in low-resolution images, including user registration. I utilized the DeepFace library for this purpose.
+              </p>
+
+            </li>
+
+          </ol>
+
+        </section>
+
+        <section class="timeline">
+
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="color-palette-outline"></ion-icon>
+            </div>
+
+            <h3 class="h3">Extra-curricular activities</h3>
+          </div>
+
+          <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Head of Events Committee, Computer Society of India, UPES</h4>
+
+              <span>2019 — 2020</span>
+
+              <p class="timeline-text">
+                As the head of the events committee, I was responsible for organizing various technical and fun events in my college.
               </p>
 
             </li>
