--- a/index.html
+++ b/index.html
@@ -462,91 +462,89 @@
 
         </section>
 
-        <section class="skill">
+        <section class="service, timeline">
 
-          <h3 class="h3 skills-title">My skills</h3>
+          <!-- <h3 class="h3 service-title">Certifications</h3> -->
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="newspaper-outline"></ion-icon>
+            </div>
 
-          <ul class="skills-list content-card">
+            <h3 class="h3">Certifications</h3>
+          </div>
 
-            <li class="skills-item">
+          <ul class="service-list">
 
-              <div class="title-wrapper">
-                <h5 class="h5">C</h5>
-                <data value="75">75%</data>
-              </div>
+            <li class="service-item">
 
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 75%;"></div>
-              </div>
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Convolutional Neural Networks - by deeplearning.ai</h4>
 
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">C++</h5>
-                <data value="85">85%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 85%;"></div>
+                <span>Issued May 2020</span>
+                <a href="https://www.coursera.org/account/accomplishments/verify/XSN3L9NJZBQA" class="form-btn" target="_blank">
+                  <ion-icon name="open-outline"></ion-icon>
+                  <span>Show credential</span>
+                </a>
               </div>
 
             </li>
 
-            <li class="skills-item">
+            <li class="service-item">
 
-              <div class="title-wrapper">
-                <h5 class="h5">Python</h5>
-                <data value="90">90%</data>
-              </div>
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Neural Networks and Deep Learning - by deeplearning.ai</h4>
 
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 90%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">HTML</h5>
-                <data value="60">60%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 60%;"></div>
+                <span>Issued May 2020</span>
+                <a href="https://www.coursera.org/account/accomplishments/verify/3U6ERDCNYB68" class="form-btn" target="_blank">
+                  <ion-icon name="open-outline"></ion-icon>
+                  <span>Show credential</span>
+                </a>
               </div>
 
             </li>
 
-            
-            <li class="skills-item">
+            <li class="service-item">
 
-              <div class="title-wrapper">
-                <h5 class="h5">Blender</h5>
-                <data value="70">70%</data>
-              </div>
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Introduction to TensorFlow for Artificial Intelligence, Machine Learning, and Deep Learning - by deeplearning.ai</h4>
 
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 70%;"></div>
+                <span>Issued March 2020</span>
+                <a href="https://coursera.org/share/37100bde42276987270067a4cf46cd04" class="form-btn" target="_blank">
+                  <ion-icon name="open-outline"></ion-icon>
+                  <span>Show credential</span>
+                </a>
               </div>
 
             </li>
 
+            <li class="service-item">
 
-            <li class="skills-item">
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Python for Data Science and AI - by IBM</h4>
 
-              <div class="title-wrapper">
-                <h5 class="h5">Graphic Design</h5>
-                <data value="60">60%</data>
+                <span>Issued March 2020</span>
+                <a href="https://www.youracclaim.com/badges/a8fc657b-cfc8-468e-b693-f5fa69543094/linked_in_profile" class="form-btn" target="_blank">
+                  <ion-icon name="open-outline"></ion-icon>
+                  <span>Show credential</span>
+                </a>
               </div>
 
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 60%;"></div>
+            </li>
+
+            <li class="service-item">
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Self Awareness and The Effective Leader</h4>
+
+                <span>Issued March 2020</span>
+                <a href="https://coursera.org/share/1b3f1dc2432621bec107a63e1983d231" class="form-btn" target="_blank">
+                  <ion-icon name="open-outline"></ion-icon>
+                  <span>Show credential</span>
+                </a>
               </div>
 
-            </li>            
+            </li>
+
           </ul>
 
         </section>
