--- a/index.html
+++ b/index.html
@@ -464,7 +464,6 @@
 
         <section class="service, timeline">
 
-          <!-- <h3 class="h3 service-title">Certifications</h3> -->
           <div class="title-wrapper">
             <div class="icon-box">
               <ion-icon name="newspaper-outline"></ion-icon>
@@ -480,10 +479,10 @@
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Convolutional Neural Networks - by deeplearning.ai</h4>
 
-                <span>Issued May 2020</span>
+                <span style="color:whitesmoke;font-weight: 200;">Issued May 2020</span>
                 <a href="https://www.coursera.org/account/accomplishments/verify/XSN3L9NJZBQA" class="form-btn" target="_blank">
                   <ion-icon name="open-outline"></ion-icon>
-                  <span>Show credential</span>
+                  <span style="font-weight: 300;">Show credential</span>
                 </a>
               </div>
 
@@ -494,24 +493,10 @@
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Neural Networks and Deep Learning - by deeplearning.ai</h4>
 
-                <span>Issued May 2020</span>
+                <span style="color:whitesmoke;font-weight: 200;">Issued May 2020</span>
                 <a href="https://www.coursera.org/account/accomplishments/verify/3U6ERDCNYB68" class="form-btn" target="_blank">
                   <ion-icon name="open-outline"></ion-icon>
-                  <span>Show credential</span>
-                </a>
-              </div>
-
-            </li>
-
-            <li class="service-item">
-
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Introduction to TensorFlow for Artificial Intelligence, Machine Learning, and Deep Learning - by deeplearning.ai</h4>
-
-                <span>Issued March 2020</span>
-                <a href="https://coursera.org/share/37100bde42276987270067a4cf46cd04" class="form-btn" target="_blank">
-                  <ion-icon name="open-outline"></ion-icon>
-                  <span>Show credential</span>
+                  <span style="font-weight: 300;">Show credential</span>
                 </a>
               </div>
 
@@ -522,10 +507,10 @@
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Python for Data Science and AI - by IBM</h4>
 
-                <span>Issued March 2020</span>
+                <span style="color:whitesmoke;font-weight: 200;">Issued March 2020</span>
                 <a href="https://www.youracclaim.com/badges/a8fc657b-cfc8-468e-b693-f5fa69543094/linked_in_profile" class="form-btn" target="_blank">
                   <ion-icon name="open-outline"></ion-icon>
-                  <span>Show credential</span>
+                  <span style="font-weight: 300;">Show credential</span>
                 </a>
               </div>
 
@@ -536,10 +521,24 @@
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Self Awareness and The Effective Leader</h4>
 
-                <span>Issued March 2020</span>
+                <span style="color:whitesmoke;font-weight: 200;">Issued March 2020</span>
                 <a href="https://coursera.org/share/1b3f1dc2432621bec107a63e1983d231" class="form-btn" target="_blank">
                   <ion-icon name="open-outline"></ion-icon>
-                  <span>Show credential</span>
+                  <span style="font-weight: 300;">Show credential</span>
+                </a>
+              </div>
+
+            </li>
+
+            <li class="service-item">
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Introduction to TensorFlow for Artificial Intelligence, Machine Learning, and Deep Learning - by deeplearning.ai</h4>
+
+                <span style="color:whitesmoke;font-weight: 200;">Issued March 2020</span>
+                <a href="https://coursera.org/share/37100bde42276987270067a4cf46cd04" class="form-btn" target="_blank">
+                  <ion-icon name="open-outline"></ion-icon>
+                  <span style="font-weight: 300;">Show credential</span>
                 </a>
               </div>
 
@@ -548,6 +547,102 @@
           </ul>
 
         </section>
+
+        <section class="skill, timeline">
+
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="construct-outline"></ion-icon>
+            </div>
+
+            <h3 class="h3">My skills</h3>
+          </div>
+
+          <ul class="skills-list content-card">
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">C</h5>
+                <data value="75" style="color:whitesmoke;">75%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 75%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">C++</h5>
+                <data value="85" style="color:whitesmoke;">85%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 85%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Python</h5>
+                <data value="90" style="color:whitesmoke;">90%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 90%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">HTML</h5>
+                <data value="60" style="color:whitesmoke;">60%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 60%;"></div>
+              </div>
+
+            </li>
+
+            
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Blender</h5>
+                <data value="70" style="color:whitesmoke;">70%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 70%;"></div>
+              </div>
+
+            </li>
+
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Graphic Design</h5>
+                <data value="60" style="color:whitesmoke;">60%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 60%;"></div>
+              </div>
+
+            </li>            
+          </ul>
+
+        </section>
+
 
       </article>
 
