--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">C</h5>
-                <data value="75" style="color:whitesmoke;">75%</data>
+                <data value="75" style="color:whitesmoke;font-size: small;">75%</data>
               </div>
 
               <div class="skill-progress-bg">
@@ -577,7 +577,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">C++</h5>
-                <data value="85" style="color:whitesmoke;">85%</data>
+                <data value="85" style="color:whitesmoke;font-size: small;">85%</data>
               </div>
 
               <div class="skill-progress-bg">
@@ -590,7 +590,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Python</h5>
-                <data value="90" style="color:whitesmoke;">90%</data>
+                <data value="90" style="color:whitesmoke;font-size: small;">90%</data>
               </div>
 
               <div class="skill-progress-bg">
@@ -603,7 +603,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">HTML</h5>
-                <data value="60" style="color:whitesmoke;">60%</data>
+                <data value="60" style="color:whitesmoke;font-size: small;">60%</data>
               </div>
 
               <div class="skill-progress-bg">
@@ -617,7 +617,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Blender</h5>
-                <data value="70" style="color:whitesmoke;">70%</data>
+                <data value="70" style="color:whitesmoke;font-size: small;">70%</data>
               </div>
 
               <div class="skill-progress-bg">
@@ -631,7 +631,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Graphic Design</h5>
-                <data value="60" style="color:whitesmoke;">60%</data>
+                <data value="60" style="color:whitesmoke;font-size: small;">60%</data>
               </div>
 
               <div class="skill-progress-bg">
