--- a/index.html
+++ b/index.html
@@ -462,7 +462,8 @@
 
         </section>
 
-        <section class="service, timeline">
+
+        <section class="service, testimonials, timeline">
 
           <div class="title-wrapper">
             <div class="icon-box">
@@ -472,76 +473,102 @@
             <h3 class="h3">Certifications</h3>
           </div>
 
-          <ul class="service-list">
+          <ul class="service-list, testimonials-list has-scrollbar">
 
-            <li class="service-item">
+            <li class="testimonials-item">
+              <div class="content-card" data-testimonials-item>
 
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Convolutional Neural Networks - by deeplearning.ai</h4>
+                <figure class="testimonials-avatar-box" >
+                  <img src="./assets/images/coursera.png" alt="coursera" width="60" data-testimonials-avatar style=" border-radius: 14px">
+                </figure>
 
-                <span style="color:whitesmoke;font-weight: 200;">Issued May 2020</span>
-                <a href="https://www.coursera.org/account/accomplishments/verify/XSN3L9NJZBQA" class="form-btn" target="_blank">
-                  <ion-icon name="open-outline"></ion-icon>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Neural Networks and Deep Learning - by deeplearning.ai</h4>
+
+                <div class="testimonials-text" data-testimonials-text>
+                  <a href="https://www.coursera.org/account/accomplishments/verify/3U6ERDCNYB68" class="form-btn" target="_blank">
+                    <ion-icon name="open-outline"></ion-icon>
                   <span style="font-weight: 300;">Show credential</span>
-                </a>
-              </div>
+                  </a>
+                </div>
 
+              </div>
             </li>
 
-            <li class="service-item">
+            <li class="testimonials-item">
+              <div class="content-card" data-testimonials-item>
 
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Neural Networks and Deep Learning - by deeplearning.ai</h4>
+                <figure class="testimonials-avatar-box" >
+                  <img src="./assets/images/coursera.png" alt="coursera" width="60" data-testimonials-avatar style=" border-radius: 14px">
+                </figure>
 
-                <span style="color:whitesmoke;font-weight: 200;">Issued May 2020</span>
-                <a href="https://www.coursera.org/account/accomplishments/verify/3U6ERDCNYB68" class="form-btn" target="_blank">
-                  <ion-icon name="open-outline"></ion-icon>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Convolutional Neural Networks - by deeplearning.ai</h4>
+
+                <div class="testimonials-text" data-testimonials-text>
+                  <a href="https://www.coursera.org/account/accomplishments/verify/XSN3L9NJZBQA" class="form-btn" target="_blank">
+                    <ion-icon name="open-outline"></ion-icon>
                   <span style="font-weight: 300;">Show credential</span>
-                </a>
-              </div>
+                  </a>
+                </div>
 
+              </div>
             </li>
 
-            <li class="service-item">
+            <li class="testimonials-item">
+              <div class="content-card" data-testimonials-item>
 
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Python for Data Science and AI - by IBM</h4>
+                <figure class="testimonials-avatar-box" >
+                  <img src="./assets/images/coursera.png" alt="coursera" width="60" data-testimonials-avatar style=" border-radius: 14px">
+                </figure>
 
-                <span style="color:whitesmoke;font-weight: 200;">Issued March 2020</span>
-                <a href="https://www.youracclaim.com/badges/a8fc657b-cfc8-468e-b693-f5fa69543094/linked_in_profile" class="form-btn" target="_blank">
-                  <ion-icon name="open-outline"></ion-icon>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Introduction to TensorFlow for 
+                  Artificial Intelligence, Machine Learning, and Deep Learning - by deeplearning.ai</h4>
+
+                <div class="testimonials-text" data-testimonials-text>
+                  <a href="https://coursera.org/share/37100bde42276987270067a4cf46cd04" class="form-btn" target="_blank">
+                    <ion-icon name="open-outline"></ion-icon>
                   <span style="font-weight: 300;">Show credential</span>
-                </a>
-              </div>
+                  </a>
+                </div>
 
+              </div>
             </li>
 
-            <li class="service-item">
+            <li class="testimonials-item">
+              <div class="content-card" data-testimonials-item>
 
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Self Awareness and The Effective Leader</h4>
+                <figure class="testimonials-avatar-box" >
+                  <img src="./assets/images/ibm.png" alt="ibm" width="60" data-testimonials-avatar style=" border-radius: 14px">
+                </figure>
 
-                <span style="color:whitesmoke;font-weight: 200;">Issued March 2020</span>
-                <a href="https://coursera.org/share/1b3f1dc2432621bec107a63e1983d231" class="form-btn" target="_blank">
-                  <ion-icon name="open-outline"></ion-icon>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Python for Data Science and AI - by IBM</h4>
+
+                <div class="testimonials-text" data-testimonials-text>
+                  <a href="https://www.youracclaim.com/badges/a8fc657b-cfc8-468e-b693-f5fa69543094/linked_in_profile" class="form-btn" target="_blank">
+                    <ion-icon name="open-outline"></ion-icon>
                   <span style="font-weight: 300;">Show credential</span>
-                </a>
-              </div>
+                  </a>
+                </div>
 
+              </div>
             </li>
 
-            <li class="service-item">
+            <li class="testimonials-item">
+              <div class="content-card" data-testimonials-item>
 
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Introduction to TensorFlow for Artificial Intelligence, Machine Learning, and Deep Learning - by deeplearning.ai</h4>
+                <figure class="testimonials-avatar-box" >
+                  <img src="./assets/images/coursera.png" alt="coursera" width="60" data-testimonials-avatar style=" border-radius: 14px">
+                </figure>
 
-                <span style="color:whitesmoke;font-weight: 200;">Issued March 2020</span>
-                <a href="https://coursera.org/share/37100bde42276987270067a4cf46cd04" class="form-btn" target="_blank">
-                  <ion-icon name="open-outline"></ion-icon>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Self Awareness and The Effective Leade</h4>
+
+                <div class="testimonials-text" data-testimonials-text>
+                  <a href="https://coursera.org/share/1b3f1dc2432621bec107a63e1983d231" class="form-btn" target="_blank">
+                    <ion-icon name="open-outline"></ion-icon>
                   <span style="font-weight: 300;">Show credential</span>
-                </a>
-              </div>
+                  </a>
+                </div>
 
+              </div>
             </li>
 
           </ul>
