--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
 
                 <h4 class="h4 testimonials-item-title" data-testimonials-title>Neural Networks and Deep Learning - by deeplearning.ai</h4>
 
-                <div class="testimonials-text" data-testimonials-text>
+                <div>
                   <a href="https://www.coursera.org/account/accomplishments/verify/3U6ERDCNYB68" class="form-btn" target="_blank">
                     <ion-icon name="open-outline"></ion-icon>
                   <span style="font-weight: 300;">Show credential</span>
@@ -503,7 +503,7 @@
 
                 <h4 class="h4 testimonials-item-title" data-testimonials-title>Convolutional Neural Networks - by deeplearning.ai</h4>
 
-                <div class="testimonials-text" data-testimonials-text>
+                <div>
                   <a href="https://www.coursera.org/account/accomplishments/verify/XSN3L9NJZBQA" class="form-btn" target="_blank">
                     <ion-icon name="open-outline"></ion-icon>
                   <span style="font-weight: 300;">Show credential</span>
@@ -523,7 +523,7 @@
                 <h4 class="h4 testimonials-item-title" data-testimonials-title>Introduction to TensorFlow for 
                   Artificial Intelligence, Machine Learning, and Deep Learning - by deeplearning.ai</h4>
 
-                <div class="testimonials-text" data-testimonials-text>
+                <div>
                   <a href="https://coursera.org/share/37100bde42276987270067a4cf46cd04" class="form-btn" target="_blank">
                     <ion-icon name="open-outline"></ion-icon>
                   <span style="font-weight: 300;">Show credential</span>
@@ -542,7 +542,7 @@
 
                 <h4 class="h4 testimonials-item-title" data-testimonials-title>Python for Data Science and AI - by IBM</h4>
 
-                <div class="testimonials-text" data-testimonials-text>
+                <div>
                   <a href="https://www.youracclaim.com/badges/a8fc657b-cfc8-468e-b693-f5fa69543094/linked_in_profile" class="form-btn" target="_blank">
                     <ion-icon name="open-outline"></ion-icon>
                   <span style="font-weight: 300;">Show credential</span>
@@ -561,7 +561,7 @@
 
                 <h4 class="h4 testimonials-item-title" data-testimonials-title>Self Awareness and The Effective Leade</h4>
 
-                <div class="testimonials-text" data-testimonials-text>
+                <div>
                   <a href="https://coursera.org/share/1b3f1dc2432621bec107a63e1983d231" class="form-btn" target="_blank">
                     <ion-icon name="open-outline"></ion-icon>
                   <span style="font-weight: 300;">Show credential</span>
