--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
                   <img src="./assets/images/coursera.png" alt="coursera" width="60" data-testimonials-avatar style=" border-radius: 14px">
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Self Awareness and The Effective Leade</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Self Awareness and The Effective Leader</h4>
 
                 <div>
                   <a href="https://coursera.org/share/1b3f1dc2432621bec107a63e1983d231" class="form-btn" target="_blank">
