--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <p class="contact-title">Email</p>
 
               <a href="mailto:gupta.anchit.99@gmail.com" class="contact-link">gupta.anchit.99@gmail.com</a>
-              <a href="mailto:angu00006@stu.uni-saarland.de" class="contact-link">angu00006@stu.uni-saarland.de</a>
+              <a href="mailto:angu00006@stud.uni-saarland.de" class="contact-link">angu00006@stud.uni-saarland.de</a>
             </div>
 
           </li>
