--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
         <section class="about-text">
           <p>
-            I am a graduate student from India studying Visual Computing at Saarland University, pursuing his love and 
+            I am a graduate student from India studying Visual Computing at Saarland University, pursuing my love and 
             passion for art through the complex and beautiful world of Visual Computing.
           </p>
 
