feat: Add project descriptions for emotion recognition and urban scene segmentation
- Added project descriptions for "EEG for Emotion Recognition" and "Analysis of Self-Supervised Learning Methods for Urban Scene Segmentation with Adverse Weather Conditions"
- Included links to project reports
- Categorized both projects as "Graduate"

--- a/index.html
+++ b/index.html
@@ -740,6 +740,38 @@
             <li class="service-item, project-item  active" data-filter-item data-category="graduate">
 
               <div class="service-content-box">
+                <h4 class="h4 service-item-title">EEG for Emotion Recognition</h4>
+
+                <p class="service-item-text">
+                  In this collaborative project, I explored emotion classification from films using low-level audio-visual features instead of EEG signals. Using datasets like 
+                  DREAMER, XGBoost models predicted Arousal and Valence with notable accuracy in LOSO validation, showing the potential of low-level features for 
+                  emotion recognition.
+                  <a href="assets/docs/EEG_seminar.pdf" target="_blank" style="color:white; font-weight: bold;">Link to the project report.</a>
+                </p>
+                <p class="project-category">Graduate</p>
+              </div>
+
+            </li>
+
+            <li class="service-item, project-item  active" data-filter-item data-category="graduate">
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Analysis of Self-Supervised Learning Methods for Urban Scene
+                  Segmentation with Adverse Weather Conditions</h4>
+
+                <p class="service-item-text">
+                  In this collaborative project, I explored self-supervised learning for urban scene segmentation in low-visibility conditions, evaluating U-Net and 
+                  DeepLabv3 models on Cityscapes and Foggy Cityscapes. Achieved accuracy comparable to fully supervised methods with less labeled data.
+                  <a href="assets/docs/hlcv_proj_t026.pdf" target="_blank" style="color:white; font-weight: bold;">Link to the project report.</a>
+                </p>
+                <p class="project-category">Graduate</p>
+              </div>
+
+            </li>
+
+            <li class="service-item, project-item  active" data-filter-item data-category="graduate">
+
+              <div class="service-content-box">
                 <h4 class="h4 service-item-title">EIGEN - A renderer based on physically based rendering</h4>
 
                 <p class="service-item-text">
