Update index.html: Add high-level computer vision to the list of covered topics during graduate studies

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             During my graduate studies, I have covered lectures in the domain of classical computer vision tasks 
             (Image Processing in Computer Vision, Differential Equations in Image Processing and Computer Vision,
             Image Acquisition Methods, Interpolation and Approximation in Visual Computing), Computer Graphics, 
-            Numerical Algorithms for Visual Computing, and Machine Learning.
+            Numerical Algorithms for Visual Computing, Machine Learning and High-Level Computer Vision.
           </p>
         </section>
 
