Update email address and add research assistant position at DFKI

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <p class="contact-title">Email</p>
 
               <a href="mailto:gupta.anchit.99@gmail.com" class="contact-link">gupta.anchit.99@gmail.com</a>
-              <a href="mailto:angu00006@stud.uni-saarland.de" class="contact-link">angu00006@stud.uni-saarland.de</a>
+              <a href="mailto:angu03@dfki.de" class="contact-link">angu03@dfki.de</a>
             </div>
 
           </li>
@@ -202,14 +202,15 @@
         <section class="about-text">
           <p>
             I am a graduate student from India studying Visual Computing at Saarland University, pursuing my love and 
-            passion for art through the complex and beautiful world of Visual Computing.
+            passion for art through the complex and beautiful world of Visual Computing. I am also working as a Research Assistant
+            at German Research Center for Artificial Intelligence (DFKI) in the field of Brain-Computer Interaction.
           </p>
 
           <p>
             During my graduate studies, I have covered lectures in the domain of classical computer vision tasks 
             (Image Processing in Computer Vision, Differential Equations in Image Processing and Computer Vision,
             Image Acquisition Methods, Interpolation and Approximation in Visual Computing), Computer Graphics, 
-            Numerical Algorithms for Visual Computing, Machine Learning and High-Level Computer Vision.
+            Numerical Algorithms for Visual Computing, Machine Learning, High-Level Computer Vision and Digital Signal Processing.
           </p>
         </section>
 
@@ -381,7 +382,7 @@
               <span>2023 — Present</span>
 
               <p class="timeline-text">
-                Currently in the third semester of my graduate degree with 60/120 ECTS completed successfully. 
+                Currently in the fourth semester of my graduate degree with 79/120 ECTS completed successfully. 
               </p>
 
             </li>
@@ -416,6 +417,19 @@
           </div>
 
           <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Research Assistant (DFKI)</h4>
+
+              <span>October, 2024 — Present</span>
+
+              <p class="timeline-text">
+                At DFKI, I work in the Cognitive Assistants department, focusing on the EEGain project and other initiatives in 
+                the Brain-Computer Interaction (BCI) domain.
+              </p>
+
+            </li>
 
             <li class="timeline-item">
 
