Update index.html: Update photography description

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                 <h4 class="h4 service-item-title">Photography</h4>
 
                 <p class="service-item-text">
-                  I love to capture my surroundings with my beloved Pixel.
+                  I love to capture the world with my beloved Pixel.
                 </p>
               </div>
 
