Update index.html: Add link to COVID-Safety-Tracker project webpage

--- a/index.html
+++ b/index.html
@@ -837,6 +837,7 @@
                   captures the facial identity of the violator to perform facial recognition if needed. It also creates a dashboard of 
                   the captured statistics. The system uses perspective transformation to get a better accuracy while detecting social 
                   distancing violations.
+                  <a href="https://github.com/AnchitGupta22/COVID-Safety-Tracker" target="_blank" style="color:white; font-weight: bold;">Link to the project webpage.</a>
                 </p>
 
                 <p class="project-category">Under-graduate</p>
