--- a/index.html
+++ b/index.html
@@ -202,15 +202,19 @@
         <section class="about-text">
           <p>
             I am a graduate student from India studying Visual Computing at Saarland University, pursuing my love and 
-            passion for art through the complex and beautiful world of Visual Computing. I am also working as a Research Assistant
-            at German Research Center for Artificial Intelligence (DFKI) in the field of Brain-Computer Interaction.
+            passion for art through the complex and beautiful world of Visual Computing.
           </p>
-
+          
           <p>
             During my graduate studies, I have covered lectures in the domain of classical computer vision tasks 
             (Image Processing in Computer Vision, Differential Equations in Image Processing and Computer Vision,
             Image Acquisition Methods, Interpolation and Approximation in Visual Computing), Computer Graphics, 
             Numerical Algorithms for Visual Computing, Machine Learning, High-Level Computer Vision and Digital Signal Processing.
+          </p>
+
+          <p>
+            I also work as a Research Assistant at the German Research Center for Artificial Intelligence (DFKI) in the Cognitive 
+            Assistants department, focusing on Brain-Computer Interaction.
           </p>
         </section>
 
