--- a/index.html
+++ b/index.html
@@ -202,19 +202,20 @@
         <section class="about-text">
           <p>
             I am a graduate student from India studying Visual Computing at Saarland University, pursuing my love and 
-            passion for art through the complex and beautiful world of Visual Computing.
+            passion for art through the complex and beautiful world of Visual Computing. I am currently working on my
+            thesis that focuses on generating insurance reports by utilizing eye surgery videos.
           </p>
-          
+          <p>
+            I also work as a Research Assistant at the German Research Center for Artificial Intelligence (DFKI) in the Cognitive 
+            Assistants department, focusing on Brain-Computer Interaction. I am currently working on the EEGain project, which aims
+            to develop a framework that facilitates the use of EEG data in the context of BCI.
+          </p>
           <p>
             During my graduate studies, I have covered lectures in the domain of classical computer vision tasks 
             (Image Processing in Computer Vision, Differential Equations in Image Processing and Computer Vision,
-            Image Acquisition Methods, Interpolation and Approximation in Visual Computing), Computer Graphics, 
-            Numerical Algorithms for Visual Computing, Machine Learning, High-Level Computer Vision and Digital Signal Processing.
-          </p>
-
-          <p>
-            I also work as a Research Assistant at the German Research Center for Artificial Intelligence (DFKI) in the Cognitive 
-            Assistants department, focusing on Brain-Computer Interaction.
+            Image Acquisition Methods, Interpolation and Approximation in Visual Computing, 
+            Numerical Algorithms for Visual Computing), Computer Graphics, Machine Learning, High-Level Computer Vision, Digital Signal Processing,
+             and Neural Networks-Theory and Implementation.
           </p>
         </section>
 
@@ -386,7 +387,7 @@
               <span>2023 — Present</span>
 
               <p class="timeline-text">
-                Currently in the fourth semester of my graduate degree with 79/120 ECTS completed successfully. 
+                Currently in the fifth semester of my graduate degree with 88/120 ECTS completed successfully.
               </p>
 
             </li>
@@ -754,6 +755,21 @@
           </div>
 
           <ul class="service-list">
+            <li class="service-item, project-item  active" data-filter-item data-category="graduate">
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Studying various training approaches for the MoLFormer model
+                  on the Lipophilicity dataset</h4>
+
+                <p class="service-item-text">
+                  In this collaborative project, I explored and implemented various data selection (influence scores, etc.) 
+                  and fine-tuning strategies (LoRA, BitFit, iA3) to adapt the pre-trained chemical language model, MoLFormer, 
+                  to the regression task of predicting lipophilicity values of the MoleculeNet Lipophilicity dataset. 
+                </p>
+                <p class="project-category">Graduate</p>
+              </div>
+
+            </li>
 
             <li class="service-item, project-item  active" data-filter-item data-category="graduate">
 
