Update index.html: Add project report link and clarify fine-tuning strategies for MoLFormer

--- a/index.html
+++ b/index.html
@@ -763,8 +763,9 @@
 
                 <p class="service-item-text">
                   In this collaborative project, I explored and implemented various data selection (influence scores, etc.) 
-                  and fine-tuning strategies (LoRA, BitFit, iA3) to adapt the pre-trained chemical language model, MoLFormer, 
-                  to the regression task of predicting lipophilicity values of the MoleculeNet Lipophilicity dataset. 
+                  and fine-tuning strategies (LoRA, BitFit, iA3) from scratch to adapt the pre-trained chemical language model, MoLFormer, 
+                  to the regression task of predicting lipophilicity values of the MoleculeNet Lipophilicity dataset.
+                  <a href="assets/docs/NNTI_Report.pdf" target="_blank" style="color:white; font-weight: bold;">Link to the project report.</a>
                 </p>
                 <p class="project-category">Graduate</p>
               </div>
