Update index.html: Add FPS gaming interest to personal description

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 <h4 class="h4 service-item-title">Gaming</h4>
 
                 <p class="service-item-text">
-                  I like to play visually stunning open world games to get creative ideas that can help me with my 3D modelling.
+                  I like to play visually stunning open world games to get creative ideas that can help me with my 3D modelling. I also like to play FPS games.
                 </p>
               </div>
 
