--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/cartoon_self.png" alt="Richard hanrick" width="80" style=" border-radius: 15px">
+          <img src="./assets/images/cartoon_self.png" alt="Anchit Gupta" width="80" style=" border-radius: 15px">
         </figure>
 
         <div class="info-content">
