Update index.html: Correct email address for contact link

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <p class="contact-title">Email</p>
 
               <a href="mailto:gupta.anchit.99@gmail.com" class="contact-link">gupta.anchit.99@gmail.com</a>
-              <a href="mailto:angu03@dfki.de" class="contact-link">angu03@dfki.de</a>
+              <a href="mailto:anchit.gupta@dfki.de" class="contact-link">anchit.gupta@dfki.de</a>
             </div>
 
           </li>
