Update index.html and style.css: Add inline-bold class for emphasis and update project descriptions

--- a/index.html
+++ b/index.html
@@ -207,8 +207,7 @@
           </p>
           <p>
             I also work as a Research Assistant at the German Research Center for Artificial Intelligence (DFKI) in the Cognitive 
-            Assistants department, focusing on Brain-Computer Interaction. I am currently working on the EEGain project, which aims
-            to develop a framework that facilitates the use of EEG data in the context of BCI.
+            Assistants department. I worked on the EEGain project, in which I assisted in developing a framework that facilitates the use of EEG data in the context of BCI. I am currently working on the NFDI-Matwerk project, which aims to create a research data infrastructure for materials science and engineering in Germany. 
           </p>
           <p>
             During my graduate studies, I have covered lectures in the domain of classical computer vision tasks 
@@ -387,7 +386,7 @@
               <span>2023 — Present</span>
 
               <p class="timeline-text">
-                Currently in the fifth semester of my graduate degree with 88/120 ECTS completed successfully.
+                Currently in the fifth semester of my graduate degree with 95/120 ECTS completed successfully.
               </p>
 
             </li>
@@ -399,8 +398,7 @@
               <span>2017 — 2021</span>
 
               <p class="timeline-text">
-                Completed my undergraduate degree in Computer Science with specialization in Business Analytics and Optimization with a grade of 8.91. Was awarded
-                the Silver Medal for being the top student in my specialization.
+                Completed my undergraduate degree in Computer Science with specialization in Business Analytics and Optimization with a grade of 8.91. Was awarded the Silver Medal for being the top student in my specialization.
               </p>
 
             </li>
@@ -430,8 +428,19 @@
               <span>October, 2024 — Present</span>
 
               <p class="timeline-text">
-                At DFKI, I work in the Cognitive Assistants department, focusing on the EEGain project and other initiatives in 
-                the Brain-Computer Interaction (BCI) domain.
+                At DFKI, I work in the Cognitive Assistants department. I assisted in completing the <a href="https://github.com/EmotionLab/EEGain" class="inline-bold" target="_blank">EEGain project</a>, which is a one stop framework that can be utilised to perform Emotion Recognition using EEG data. I also helped in publishing a paper on this project, which is currently under review (<a href="https://arxiv.org/abs/2505.18175" class="inline-bold" target="_blank"">Pre-print</a>). I am currently working on the NFDI-Matwerk project, which aims to create a research data infrastructure for materials science and engineering in Germany, mostly supporting the MLOps side of the project.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Tutor - Digital Signal Processing (Saarland University)</h4>
+
+              <span>April, 2025 — July, 2025</span>
+
+              <p class="timeline-text">
+                As a tutor for the Digital Signal Processing course, I assisted students in understanding complex concepts, solving problems, and preparing for exams. I conducted weekly sessions to clarify doubts and provide additional learning resources. I was also responsible for creating and grading assignments.
               </p>
 
             </li>
