--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
                   In this collaborative project, I explored and implemented various data selection (influence scores, etc.) 
                   and fine-tuning strategies (LoRA, BitFit, iA3) from scratch to adapt the pre-trained chemical language model, MoLFormer, 
                   to the regression task of predicting lipophilicity values of the MoleculeNet Lipophilicity dataset.
-                  <a href="assets/docs/NNTI_Report.pdf" target="_blank" style="color:white; font-weight: bold;">Link to the project report.</a>
+                  <a href="https://drive.google.com/file/d/1EgFVFjdQHIvPeh1Y-HfduutmpiXVqHvS/view?usp=drive_link" target="_blank" style="color:white; font-weight: bold;">Link to the project report.</a>
                 </p>
                 <p class="project-category">Graduate</p>
               </div>
@@ -790,7 +790,7 @@
                   In this collaborative project, I explored emotion classification from films using low-level audio-visual features instead of EEG signals. Using datasets like 
                   DREAMER, XGBoost models predicted Arousal and Valence with notable accuracy in LOSO validation, showing the potential of low-level features for 
                   emotion recognition.
-                  <a href="assets/docs/EEG_seminar.pdf" target="_blank" style="color:white; font-weight: bold;">Link to the project report.</a>
+                  <a href="https://drive.google.com/file/d/1QEvUl5G0Xy59KbmJ7eXyuU8FKgzwhG2R/view?usp=sharing" target="_blank" style="color:white; font-weight: bold;">Link to the project report.</a>
                 </p>
                 <p class="project-category">Graduate</p>
               </div>
@@ -806,7 +806,7 @@
                 <p class="service-item-text">
                   In this collaborative project, I explored self-supervised learning for urban scene segmentation in low-visibility conditions, evaluating U-Net and 
                   DeepLabv3 models on Cityscapes and Foggy Cityscapes. Achieved accuracy comparable to fully supervised methods with less labeled data.
-                  <a href="assets/docs/hlcv_proj_t026.pdf" target="_blank" style="color:white; font-weight: bold;">Link to the project report.</a>
+                  <a href="https://drive.google.com/file/d/12okqkS-mvMyeokPa6HhIOjLo8h6kxE7m/view?usp=drive_link" target="_blank" style="color:white; font-weight: bold;">Link to the project report.</a>
                 </p>
                 <p class="project-category">Graduate</p>
               </div>
